[package]
name = "sgpc3"
version = "1.0.0"
authors = ["Mikko Jaakkola <mikko.la.jaakkola@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Rust driver for the Sensirion SGPC3 gas sensor."
readme = "README.md"
repository = "https://github.com/mjaakkol/sgpc3-rs"
keywords = ["sgpc3", "sensirion", "driver", "tvoc", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sensirion-i2c = "0.1"
embedded-hal = "0.2"
fixed = "1"
cordic = "0.1"

[dev-dependencies]
linux-embedded-hal = "0.3"
embedded-hal-mock = "0.7"

[profile.release]
lto = true
